SFUSA/force-app/main/default/objects/Tags__c/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </CustomField>