SFUSA/force-app/main/default/objects/Tags__c/fields/Brand_Abbreviation__c.field-meta.xml
<CustomField>
        <fullName>Brand_Abbreviation__c</fullName>
        <label>Brand Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>