SFUSA/force-app/main/default/objects/Tags__c/fields/BrandFamily__c.field-meta.xml
<CustomField>
        <fullName>BrandFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Family</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>BrandFamily</relationshipName>
        <type>Lookup</type>
    </CustomField>