SFUSA/force-app/main/default/objects/Tags__c/fields/IOCodeSegment__c.field-meta.xml
<CustomField>
        <fullName>IOCodeSegment__c</fullName>
        <label>IO Code Segment</label>
        <length>12</length>
        <type>Text</type>
    </CustomField>