SFUSA/force-app/main/default/objects/Tags__c/fields/IsActive__c.field-meta.xml
<CustomField>
        <fullName>IsActive__c</fullName>
        <formula>Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive</label>
        <type>Checkbox</type>
    </CustomField>