SFUSA/force-app/main/default/objects/Tags__c/fields/SAP_Product_Hierarchy__c.field-meta.xml
<CustomField>
        <fullName>SAP_Product_Hierarchy__c</fullName>
        <label>SAP Product Hierarchy</label>
        <length>7</length>
        <type>Text</type>
    </CustomField>