SFUSA/force-app/main/default/objects/Tags__c/fields/SAP_Sales_District__c.field-meta.xml
<CustomField>
        <fullName>SAP_Sales_District__c</fullName>
        <label>SAP Sales District</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>