SFUSA/force-app/main/default/objects/Tags__c/fields/SimilarValues__c.field-meta.xml
<CustomField>
        <fullName>SimilarValues__c</fullName>
        <label>Similar Values</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>