SFUSA/force-app/main/default/objects/Tags__c/fields/Territory_Abbreviation__c.field-meta.xml
<CustomField>
        <fullName>Territory_Abbreviation__c</fullName>
        <label>Territory Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>