SFUSA/force-app/main/default/objects/Tags__c/recordTypes/Brand.recordType-meta.xml
<RecordType>
        <fullName>Brand</fullName>
        <active>true</active>
        <description>Brand Record Type.</description>
        <label>Brand</label>
    </RecordType>