SFUSA/force-app/main/default/objects/Tags__c/recordTypes/BrandFamily.recordType-meta.xml
<RecordType>
        <fullName>BrandFamily</fullName>
        <active>true</active>
        <description>Brand Family Record Type.</description>
        <label>Brand Family</label>
    </RecordType>