SFUSA/force-app/main/default/objects/Tags__c/recordTypes/BrandQuality.recordType-meta.xml
<RecordType>
        <fullName>BrandQuality</fullName>
        <active>true</active>
        <description>Brand Quality Record Type.</description>
        <label>Brand Quality</label>
    </RecordType>