SFUSA/force-app/main/default/objects/Tags__c/recordTypes/BrandVariety.recordType-meta.xml
<RecordType>
        <fullName>BrandVariety</fullName>
        <active>true</active>
        <description>Brand Variety Record Type.</description>
        <label>Brand Variety</label>
    </RecordType>