SFUSA/force-app/main/default/objects/Tags__c/validationRules/WBS_Segment_Length_Brand.validationRule-meta.xml
<ValidationRule>
        <fullName>WBS_Segment_Length_Brand</fullName>
        <active>true</active>
        <description>Enforces field length requirements for the WBS Segment on the Brand record type.</description>
        <errorConditionFormula>IF(ISBLANK(WBSCodeSegment__c), false, AND(RecordType.DeveloperName='Brand', LEN(WBSCodeSegment__c)!=4))</errorConditionFormula>
        <errorMessage>A Brand's WBS Code Segment must be exactly four characters long.</errorMessage>
    </ValidationRule>