SFUSA/force-app/main/default/objects/Tags__c/validationRules/WBS_Segment_Length_Brand_Quality.validationRule-meta.xml
<ValidationRule>
        <fullName>WBS_Segment_Length_Brand_Quality</fullName>
        <active>true</active>
        <description>Enforces field length requirements for the WBS Segment on the Brand Quality record type.</description>
        <errorConditionFormula>IF(ISBLANK(WBSCodeSegment__c), false, AND(RecordType.DeveloperName='BrandQuality', LEN(WBSCodeSegment__c)!=3))</errorConditionFormula>
        <errorMessage>A Brand Quality's WBS Code Segment must be exactly three characters long.</errorMessage>
    </ValidationRule>